styles fixes on tablet

--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -42,8 +42,30 @@ body {
   }
 }
 
-@media screen and (max-height: 800px) and (min-width: 768px) and (max-width: 768px){
+@media screen and (max-height: 801px) and (min-width: 768px) and (max-width: 1280px){
   .tooHeightBtn{
-    background-color: red;
+    margin-top: 1rem !important;
+  }
+  .tooHeightText{
+    margin-bottom: 0 !important;
+  }
+}
+@media screen and (max-height: 701px) and (min-width: 768px) and (max-width: 1280px){
+  .tooHeightBtn{
+    margin-top: 1rem !important;
+  }
+  .tooHeightText{
+    margin-bottom: 0 !important;
+    display: none;
+  }
+}
+@media screen and (max-height: 800px) and (min-width: 1280px) {
+  .tooHeightBtn{
+    margin-top: 1rem !important;
+    display: none;
+  }
+  .tooHeightText{
+    margin-bottom: 0 !important;
+    display: none;
   }
 }
